<resources>
    <string name="app_name">Games Inventory App</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="result_before_count">The games table contains\u0020</string>
    <string name="result_after_count">\u0020games.\n\n</string>
    <string name="action_delete_all_entries">Delete All Games</string>
    <string name="sell_button_text">Sell 1 pc</string>
    <string name="label_game_name">Title:</string>
    <string name="hint_game_name">Game Title</string>
    <string name="label_game_genre">Genre:</string>
    <string name="label_game_platform">Platform:</string>
    <string name="label_game_price">Price:</string>
    <string name="hint_game_price">0.00</string>
    <string name="label_game_stock">Stock:</string>
    <string name="hint_game_stock">0</string>
    <string name="label_game_provider">Provider:</string>
    <string name="hint_provider_name">Name</string>
    <string name="hint_provider_phone">Phone</string>

    <!-- Labels for genre dropdown menu option -->
    <string name="genre_unknown">Unknown</string>
    <string name="genre_action">Action</string>
    <string name="genre_strategy">Strategy</string>
    <string name="genre_rpg">RPG</string>
    <string name="genre_fps">FPS</string>
    <string name="genre_sport">Sport</string>

    <!-- Labels for platform dropdown menu option -->
    <string name="platform_pc">PC</string>
    <string name="platform_xbox_one">Xbox One</string>
    <string name="platform_xbox_360">Xbox 360</string>
    <string name="platform_ps3">PS3</string>
    <string name="platform_ps4">PS4</string>

    <!-- Error messages -->
    <string name="increment_error_message">You cannot have more than 99 games in stock</string>
    <string name="decrement_error_message">You cannot have less than 0 games in stock</string>

    <!-- Tools values  -->
    <string name="tools_game_name">Mafia III</string>
    <string name="tools_game_genre">Genre: Action</string>
    <string name="tools_game_platform">Platform: Xbox One</string>
    <string name="tools_game_price">Price: 19.22 &#x20AC;</string>
    <string name="tools_game_stock">Left in stock: 5</string>

    <!-- Strings for CatalogActivity  -->
    <string name="before_genre_text">Genre:\u0020</string>
    <string name="before_platform_text">Platform:\u0020</string>
    <string name="before_price_text">Price:\u0020</string>
    <string name="before_stock_text">Left in stock:\u0020</string>
    <string name="out_of_stock_msg">Out of stock!</string>
    <string name="instructions_text">Press + button to add a new game\n in your inventory (title, genre, platform\n and provider name are required fields)</string>

    <!-- Strings for EditorActivity  -->
    <string name="editor_activity_title_new_game">Add a new Game</string>
    <string name="editor_activity_title_edit_game">Edit Game</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="call_supplier_button_text">Call Supplier</string>

    <!-- Toast messages for insert, update and delete operations -->
    <string name="editor_insert_game_failed">Error with saving the game</string>
    <string name="editor_insert_game_successful">Game saved</string>
    <string name="editor_update_game_failed">Error with updating the game</string>
    <string name="editor_update_game_successful">Game updated</string>
    <string name="editor_delete_game_failed">Error with deleting the game</string>
    <string name="editor_delete_game_successful">Game deleted</string>

    <!-- Strings for UnsavedChangesDialog -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard_option">Discard</string>
    <string name="keep_editing_option">Keep Editing</string>

    <!-- Strings for DeleteConfirmationDialog -->
    <string name="delete_dialog_msg">Delete this game?</string>
    <string name="delete_option">Delete</string>
    <string name="cancel_option">Cancel</string>

</resources>
