<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/m_margin"
    tools:context=".EditorActivity">


    <!-- Game name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/label_game_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingStart="@dimen/xs_padding">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_game_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_game_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Game genre -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/label_game_genre" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/editor_spinner_height"
                android:paddingEnd="@dimen/m_padding"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Game platform -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/label_game_platform" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_platform"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/editor_spinner_height"
                android:paddingEnd="@dimen/m_padding"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Game price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/label_game_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/xs_padding">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_game_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_game_price"
                android:inputType="numberDecimal"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <!-- Label -->
        <TextView
            style="@style/EditorLabelStyle"
            android:paddingStart="@dimen/m_padding"
            android:text="@string/label_game_stock" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:orientation="horizontal"
            android:paddingStart="@dimen/xs_padding">

            <!-- Add 1 stock button -->
            <ImageButton
                android:id="@+id/minus_stock"
                android:layout_width="@dimen/stock_buttons_dimen"
                android:layout_height="@dimen/stock_buttons_dimen"
                android:background="@drawable/ic_remove_circle_24dp"
                android:backgroundTint="@color/colorAccent" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_game_stock"
                style="@style/EditorFieldStyle"
                android:layout_width="@dimen/stock_edit_text_width"
                android:hint="@string/hint_game_stock"
                android:inputType="number"
                android:textAlignment="viewEnd" />

            <!-- Remove 1 from stock button -->
            <ImageButton
                android:id="@+id/plus_stock"
                android:layout_width="@dimen/stock_buttons_dimen"
                android:layout_height="@dimen/stock_buttons_dimen"
                android:background="@drawable/ic_add_circle_24dp"
                android:backgroundTint="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

    <!-- Game provider -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/EditorLabelStyle"
            android:text="@string/label_game_provider" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingStart="@dimen/xs_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_game_provider_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_provider_name"
                    android:inputType="textCapWords"
                    android:textAppearance="?android:textAppearanceSmall" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_game_provider_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_provider_phone"
                    android:inputType="phone"
                    android:textAppearance="?android:textAppearanceSmall" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>